--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       window.dataLayer = window.dataLayer || [],
       gtag("js", new Date),
       gtag("config", "UA-25811690-6")</script>
-    <link href="/static/css/main.8685226c.chunk.css" rel="stylesheet"></head>
+    <link href="./static/css/main.8685226c.chunk.css" rel="stylesheet"></head>
   
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
