--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       window.dataLayer = window.dataLayer || [],
       gtag("js", new Date),
       gtag("config", "UA-25811690-6")</script>
-    <link href="./static/css/main.8685226c.chunk.css" rel="stylesheet"></head>
+    <link href="/Mandelbrot/static/css/main.8685226c.chunk.css" rel="stylesheet"></head>
   
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -119,8 +119,8 @@
         var i = p;
         t()
       } ([])</script>
-    <script src="/static/js/2.6dd83e75.chunk.js"></script>
-    <script src="/static/js/main.9c3c4220.chunk.js"></script>
+    <script src="/Mandelbrot/static/js/2.6dd83e75.chunk.js"></script>
+    <script src="/Mandelbrot/static/js/main.9c3c4220.chunk.js"></script>
   </body>
 
 </html>
